Splitting CSS into separate file

--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
         <title>
             Domain developer test
         </title>
+        <link rel="stylesheet" href="build/styles.css">
     </head>
 
     <body>
