--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>
-            Domain developer test
-        </title>
-        <link rel="stylesheet" href="build/styles.css">
-    </head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>
+        Domain Developer Test
+    </title>
+    <link rel="stylesheet" href="build/styles.css">
+</head>
 
-    <body>
-        <div id="app">
-        </div>
-        <script src="/build/bundle.js"></script>
-    </body>
+<body>
+    <div id="app">
+    </div>
+    <script src="/build/bundle.js"></script>
+</body>
 </html>
